Update assembly_assessment.md